# vk_pointcloud_lpn

./: LICENSE  README.md
include/vk_sdk/: Data.hpp  DisparityToDepth.hpp  DisparityToDistance.hpp  DisparityToPointCloud.hpp  Logging.hpp  Message.hpp  Preamble.hpp  Receivers.hpp  Sdk.hpp  Utilities.hpp  VisualKit.hpp
include/vk_sdk/capnp/: Shared.hpp  cameracontrol.capnp.h  cameraintrinsic.capnp.h  detection2d.capnp.h  disparity.capnp.h  flow2d.capnp.h  gps.capnp.h  header.capnp.h  image.capnp.h  imu.capnp.h  imulist.capnp.h  mavstate.capnp.h  odometry3d.capnp.h  pointcloud.capnp.h  se3.capnp.h  sensorextrinsic.capnp.h  so3.capnp.h  system.capnp.h  tagdetection.capnp.h  twist3.capnp.h  vector2.capnp.h  vector3.capnp.h
pointcloud_generator/: .gitignore  CMakeLists.txt
pointcloud_generator/cmake/: CPackConfigDeb.cmake
pointcloud_generator/cmake/DEBIAN/: postinst
pointcloud_generator/houchuli/: 1.py
pointcloud_generator/include/: spdlog_assert.h
pointcloud_generator/include/pointcloud/: GridMapper.hpp
pointcloud_generator/include/recording/: Mcap.hpp
pointcloud_generator/include/trajectory/: CalibLoader.hpp  TimeSync.hpp
pointcloud_generator/json/: config.json  config_left_raw.json  config_right_raw.json  config_submap.json  disparity_calib_left.json  disparity_calib_right.json  saved_calib.json
pointcloud_generator/src/pointcloud/: AccumPointClouds.cpp  GridMapper.cpp  PointCloudGenerator.cpp  raycast.cpp
pointcloud_generator/src/trajectory/: CalibLoader.cpp  TimeSync.cpp  TrajectoryOptimizer.cpp  main.cpp
